fix z-index

--- a/Blogtify/Blogtify.Client/Layout/AppBar.razor.css
+++ b/Blogtify/Blogtify.Client/Layout/AppBar.razor.css
@@ -1,4 +1,7 @@
 
+.appbar {
+    z-index: 20000;
+}
 
 .logo:hover {
     cursor: pointer;
