--- a/Blogtify/Blogtify/wwwroot/css/code-block.css
+++ b/Blogtify/Blogtify/wwwroot/css/code-block.css
@@ -16,7 +16,7 @@ code {
     position: absolute;
     bottom: 0;
     right: 0;
-    z-index: 1000 !important;
+    z-index: 10 !important;
     border: none !important;
     border-top-left-radius: 5px !important;
     border-bottom-left-radius: 0 !important;
